--- a/epcurate-publish.html
+++ b/epcurate-publish.html
@@ -5,32 +5,32 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=548" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=548" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=548" />
-<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=548" />
-<link rel="stylesheet" href="stylesheets/epcurate.css?v=548" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<link rel="stylesheet" href="stylesheets/style.css?v=647" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=647" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=647" />
+<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=647" />
+<link rel="stylesheet" href="stylesheets/epcurate.css?v=647" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=548"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=548"></script>
-<script src="javascripts/jquery.ellipsis.js?v=548"></script>
-<script src="javascripts/jquery.blockUI.js?v=548"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=548"></script>
-<script src="javascripts/jquery.uniform.min.js?v=548"></script>
-<script src="javascripts/jquery.cycle.all.js?v=548"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=548"></script>
-<script src="javascripts/jquery.cookie.js?v=548"></script>
-<script src="javascripts/jquery.ui.datepicker-en.js?v=548"></script>
-<script src="javascripts/jquery.ui.datepicker-zh.js?v=548"></script>
-<script src="javascripts/json2.js?v=548"></script>
-<script src="javascripts/purl.js?v=548"></script>
-<script src="javascripts/swfupload/swfupload.js?v=548"></script>
-<script src="javascripts/vertical.slider.js?v=548"></script>
-<script src="javascripts/config.js?v=548"></script>
-<script src="javascripts/controller.js?v=548"></script>
-<script src="javascripts/basic.js?v=548"></script>
-<script src="javascripts/epcurate.js?v=548"></script>
+<script src="javascripts/nn-sdk.js?v=647"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=647"></script>
+<script src="javascripts/jquery.ellipsis.js?v=647"></script>
+<script src="javascripts/jquery.blockUI.js?v=647"></script>
+<script src="javascripts/jquery.toggleval.min.js?v=647"></script>
+<script src="javascripts/jquery.uniform.min.js?v=647"></script>
+<script src="javascripts/jquery.cycle.all.js?v=647"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=647"></script>
+<script src="javascripts/jquery.cookie.js?v=647"></script>
+<script src="javascripts/jquery.ui.datepicker-en.js?v=647"></script>
+<script src="javascripts/jquery.ui.datepicker-zh.js?v=647"></script>
+<script src="javascripts/json2.js?v=647"></script>
+<script src="javascripts/purl.js?v=647"></script>
+<script src="javascripts/swfupload/swfupload.js?v=647"></script>
+<script src="javascripts/vertical.slider.js?v=647"></script>
+<script src="javascripts/config.js?v=647"></script>
+<script src="javascripts/controller.js?v=647"></script>
+<script src="javascripts/basic.js?v=647"></script>
+<script src="javascripts/epcurate.js?v=647"></script>
 <title>9x9.tv - Episode Curation - Publish</title>
 </head>
 <body>
@@ -127,7 +127,7 @@
 </div>
 <div class="img-upload-func">
 <p id="uploadThumbnail">${nn._([CMS_CONF.PAGE_ID, 'epcurate-form', 'Upload'])}</p>
-<p class="notice">${nn._([CMS_CONF.PAGE_ID, 'epcurate-form', 'Better results with 720x480 or higher resolution image'])}</p>
+<p class="notice">${nn._([CMS_CONF.PAGE_ID, 'epcurate-form', 'Better results with 720x405 or higher resolution image'])}</p>
 <p class="upload-notice highlight hide">${nn._([CMS_CONF.PAGE_ID, 'epcurate-form', 'Please upload jpeg, png, or gif files.'])}</p>
 <input type="hidden" name="imageUrl" id="imageUrl" value="${imageUrl}" />
 <input type="hidden" name="imageUrlOld" id="imageUrlOld" value="${imageUrl}" />
@@ -217,8 +217,8 @@
         <li><a href="/#!about=contact">Contact us</a></li>
         <li><a href="/#!about=partners">Partners</a></li>
         <li><a href="/#!about=curators">Curators</a></li>
-        <li><a href="/#!about=press">Press</a></li>
-        <li><a href="/#!about=contest">Curation Contest</a></li>
+        <li id="footer-press"><a href="/#!about=press">Press</a></li>
+        <li id="footer-contest"><a href="/#!about=contest">Curation Contest</a></li>
       </ul>
     </li>
     <li id="language-change">
