--- a/channel-add.html
+++ b/channel-add.html
@@ -5,29 +5,29 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=670" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=670" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=670" />
-<link rel="stylesheet" href="stylesheets/channel.css?v=670" />
+<link rel="stylesheet" href="stylesheets/style.css?v=701" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=701" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=701" />
+<link rel="stylesheet" href="stylesheets/channel.css?v=701" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=670"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=670"></script>
-<script src="javascripts/jquery.ellipsis.js?v=670"></script>
-<script src="javascripts/jquery.blockUI.js?v=670"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=670"></script>
-<script src="javascripts/jquery.charcounter.min.js?v=670"></script>
-<script src="javascripts/jquery.uniform.min.js?v=670"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=670"></script>
-<script src="javascripts/jquery.cookie.js?v=670"></script>
-<script src="javascripts/json2.js?v=670"></script>
-<script src="javascripts/purl.js?v=670"></script>
-<script src="javascripts/swfupload/swfupload.js?v=670"></script>
-<script src="javascripts/vertical.slider.js?v=670"></script>
-<script src="javascripts/config.js?v=670"></script>
-<script src="javascripts/controller.js?v=670"></script>
-<script src="javascripts/basic.js?v=670"></script>
-<script src="javascripts/channel.js?v=670"></script>
+<script src="javascripts/nn-sdk.js?v=701"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=701"></script>
+<script src="javascripts/jquery.ellipsis.js?v=701"></script>
+<script src="javascripts/jquery.blockUI.js?v=701"></script>
+<script src="javascripts/jquery.toggleval.min.js?v=701"></script>
+<script src="javascripts/jquery.charcounter.min.js?v=701"></script>
+<script src="javascripts/jquery.uniform.min.js?v=701"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=701"></script>
+<script src="javascripts/jquery.cookie.js?v=701"></script>
+<script src="javascripts/json2.js?v=701"></script>
+<script src="javascripts/purl.js?v=701"></script>
+<script src="javascripts/swfupload/swfupload.js?v=701"></script>
+<script src="javascripts/vertical.slider.js?v=701"></script>
+<script src="javascripts/config.js?v=701"></script>
+<script src="javascripts/controller.js?v=701"></script>
+<script src="javascripts/basic.js?v=701"></script>
+<script src="javascripts/channel.js?v=701"></script>
 <title>9x9.tv - Create a new channel</title>
 </head>
 <body>
@@ -95,7 +95,7 @@
 <label for="name"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Title'])}</label>
 <div class="fmfield">
 <p class="text"><span><input type="text" name="name" id="name" maxlength="100" value="" class="text" /></span></p>
-<span class="notice"><span id="name-charcounter">20</span><br />${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Best within 20 characters'])}</span>
+<span class="notice"><span id="name-charcounter">20</span>　${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Best within 20 characters'])}</span>
 </div>
 </div>
 <div class="fminput clearfix">
@@ -113,7 +113,7 @@
 <label>${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Description'])}</label>
 <div class="fmfield">
 <p class="textarea"><span><span><textarea name="intro" id="intro" cols="80" class="textarea"></textarea></span></span></p>
-<span class="notice"><span id="intro-charcounter">70</span><br />${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Best within 70 characters'])}</span>
+<span class="notice"><span id="intro-charcounter">70</span>　${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Best within 70 characters'])}</span>
 </div>
 </div>
 <div class="fminput clearfix">
